--- a/backend/app/requirements.txt
+++ b/backend/app/requirements.txt
@@ -12,3 +12,5 @@ requests==2.31.0
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 aiofiles==23.2.1
+psycopg2-binary==2.9.9
+starlette==0.27.0
