--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,23 +4,24 @@
   "description": "Interface React para Corretor ACAFE Fleming",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "react-router-dom": "^6.8.1",
     "axios": "^1.6.2",
-    "react-dropzone": "^14.2.3",
-    "react-chartjs-2": "^5.2.0",
     "chart.js": "^4.4.0",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.294.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.6",
-    "@headlessui/react": "^1.7.17",
-    "framer-motion": "^10.16.16"
+    "web-vitals": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
