--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,23 +2,24 @@ server {
     listen 8080;
     server_name localhost;
 
+    # Diretório dos arquivos estáticos
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Assets estáticos
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+    # Cache para assets (exceto HTML)
+    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        try_files $uri =404;
     }
 
-    # API
+    # Proxy para o backend (ajusta URL se necessário)
     location /api/ {
         proxy_pass https://corretor-backend-531557718717.us-central1.run.app/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
         proxy_connect_timeout 300s;
         proxy_send_timeout 300s;
         proxy_read_timeout 300s;
@@ -27,42 +28,12 @@ server {
 
     # Health check
     location /health {
-        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/api/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        return 200 "ok\n";
+        add_header Content-Type text/plain;
     }
 
-    # React Router (SPA)
+    # React Router (SPA) – redireciona tudo para index.html
     location / {
-        try_files $uri $uri/ /index.html;
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    # Manifest e service worker
-    location ~* \.(manifest|sw)\.js$ {
-        add_header Cache-Control "no-cache, no-store, must-revalidate";
-        add_header Pragma "no-cache";
-        add_header Expires "0";
-    }
-
-    gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_proxied expired no-cache no-store private must-revalidate auth;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
-
-    error_page 404 /index.html;
-    error_page 500 502 503 504 /50x.html;
-
-    location = /50x.html {
-        root /usr/share/nginx/html;
+        try_files $uri /index.html;
     }
 }
