--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -12,9 +12,9 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # Proxy para o backend (ajusta URL se necessário)
+    # Proxy para o backend
     location /api/ {
-        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/api/;
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
