--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,37 +2,24 @@ server {
     listen 8080;
     server_name localhost;
 
-    # Diretório dos arquivos estáticos
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Cache para assets (exceto HTML)
-    location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|ttf|svg)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Proxy para o backend
+    # Proxy para backend
     location /api/ {
-        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/;
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/api/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        proxy_connect_timeout 300s;
-        proxy_send_timeout 300s;
-        proxy_read_timeout 300s;
-        client_max_body_size 200M;
     }
 
     # Health check
     location /health {
-        return 200 "ok\n";
-        add_header Content-Type text/plain;
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/health;
     }
 
-    # React Router (SPA) – redireciona tudo para index.html
+    # React Router (SPA)
     location / {
         try_files $uri /index.html;
     }
