--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,19 +8,32 @@ server {
     # Proxy para backend
     location /api/ {
         proxy_pass https://corretor-backend-531557718717.us-central1.run.app/api/;
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Evitar timeout em uploads grandes
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
+
+        # Tamanho máximo permitido para upload
+        client_max_body_size 200M;
     }
 
-    # Health check
+    # Health check (frontend responde com 200)
     location /health {
-        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/health;
+        return 200 'OK';
+        add_header Content-Type text/plain;
     }
 
-    # React Router (SPA)
+    # React Router (SPA) → sempre volta pro index.html
     location / {
         try_files $uri /index.html;
     }
+
+    # Erros
+    error_page 500 502 503 504 /index.html;
 }
