fix: corrigir proxy_pass para backend

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -7,7 +7,7 @@ server {
 
     # Proxy para backend
     location /api/ {
-        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/api/;
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -15,7 +15,7 @@ server {
     }
 
     # Health check
-    location /api/health {
+    location /health {
         proxy_pass https://corretor-backend-531557718717.us-central1.run.app/health;
     }
 
