fix: ajustar proxy_pass para backend sem duplicar /api

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,7 +5,7 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Proxy para backend
+    # Proxy para backend (remove duplicação de /api)
     location /api/ {
         proxy_pass https://corretor-backend-531557718717.us-central1.run.app/;
         proxy_set_header Host $host;
@@ -14,7 +14,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Health check
+    # Health check (passa para o backend também)
     location /health {
         proxy_pass https://corretor-backend-531557718717.us-central1.run.app/health;
     }
