--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -24,3 +24,30 @@ server {
         try_files $uri /index.html;
     }
 }
+server {
+    listen 8080;
+    server_name localhost;
+
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
+    # Proxy para backend (remove prefixo /api)
+    location /api/ {
+        rewrite ^/api/(.*)$ /$1 break;
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Health check (direto no backend)
+    location /health {
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/health;
+    }
+
+    # React Router (SPA)
+    location / {
+        try_files $uri /index.html;
+    }
+}
