update tamanho de arquivo

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,6 +2,8 @@ server {
     listen 8080;
     server_name localhost;
 
+    client_max_body_size 200M;  # 👈 permite arquivos até 200 MB
+    
     root /usr/share/nginx/html;
     index index.html index.htm;
 
