--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -2,27 +2,32 @@ server {
     listen 8080;
     server_name localhost;
 
-    client_max_body_size 200M;  # 👈 permite arquivos até 200 MB
-    
     root /usr/share/nginx/html;
     index index.html index.htm;
 
-    # Proxy para backend (remove prefixo /api antes de enviar)
+    # Limite de upload aumentado (200MB)
+    client_max_body_size 200M;
+
+    # Proxy para backend
     location /api/ {
-        rewrite ^/api/(.*)$ /$1 break;
-        proxy_pass https://corretor-backend-531557718717.us-central1.run.app;
+        proxy_pass https://corretor-backend-531557718717.us-central1.run.app/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Health check (direto no backend)
+    # Health
     location /health {
         proxy_pass https://corretor-backend-531557718717.us-central1.run.app/health;
     }
 
-    # React Router (SPA)
+    # Garantir que arquivos estáticos críticos sejam servidos como eles são
+    location = /manifest.json { }
+    location = /sw.js { }
+    location = /favicon.ico { }
+
+    # React Router (SPA) – só cai aqui quando não for arquivo real
     location / {
         try_files $uri /index.html;
     }
